--- a/pom.xml
+++ b/pom.xml
@@ -303,7 +303,11 @@
           <artifactId>grpc-stub</artifactId>
           <version>1.18.0</version>
         </dependency>
-
+        <dependency>
+          <groupId>io.grpc</groupId>
+          <artifactId>grpc-netty</artifactId>
+          <version>1.18.0</version>
+        </dependency>
     </dependencies>
 
     <build>
